# mecheye_ros2_interface

./: CMakeLists.txt  LICENSE  README.md  migration-guide.md  package.xml
include/: MechMindCamera.h
launch/: start_camera.launch  start_camera.py
mech_eye_tripod/: ass-tripod.STL
src/: MechMindCamera.cpp  main.cpp
srv/: DeviceInfo.srv  GetLaserSettings.srv  Set2DExposureMode.srv  Set2DExposureSequence.srv  Set2DToneMappingEnable.srv  Set3DGain.srv  Set3DROI.srv  SetCloudOutlierFilterMode.srv  SetCloudSmoothMode.srv  SetDepthRange.srv  SetFringeContrastThreshold.srv  SetLaserSettings.srv  SetProjectorAntiFlickerMode.srv  SetProjectorFringeCodingMode.srv  SetProjectorPowerLevel.srv
