<?xml version="1.0"?>
<package format="3">
  <name>mecheye_ros_interface</name>
  <version>0.0.2</version>
  <description>mecheye_ros2_interface package for Mechmind 3D camera, modify from the official API from Mechmind</description>

  <maintainer email="service@mech-mind.net"></maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>